<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"        
        android:title="@string/menu_settings">
    	<menu >
    	    <item 
    	        android:id="@+id/menu_settings_website_manager"
    	        android:showAsAction="collapseActionView"
    	        android:title="dsfdsfsdfsfsfr"
    	        />
    	    <item 
    	        android:id="@+id/menu_settings_help"
    	        android:showAsAction="collapseActionView"
    	        android:title="@string/menu_settings_help"
    	        />
    	    <item 
    	        android:id="@+id/menu_settings_about"
    	        android:showAsAction="collapseActionView"
    	        android:title="@string/menu_settings_about"
    	        />
    	</menu>    
    </item>

</menu>