<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_bar_option"
        android:orderInCategory="100"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_settings_website_manager"
                android:showAsAction="collapseActionView"
                android:title="@string/menu_settings_website_manager"/>
            <item
                android:id="@+id/menu_settings_help"
                android:showAsAction="collapseActionView"
                android:title="@string/menu_settings_help"/>
            <item
                android:id="@+id/menu_settings_about"
                android:showAsAction="collapseActionView"
                android:title="@string/menu_settings_about"/>
        </menu>
    </item>

</menu>