<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_content"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/TEXTYLE_POSTS_LISTVIEW"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.arnia.karybu.controls.SegmentedRadioGroup
            android:id="@+id/POST_FILTER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/TEXTYLE_POSTS_ALLOPTION"
                android:layout_weight=".5"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:text="@string/all_post"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/radio_colors" />

            <RadioButton
                android:id="@+id/TEXTYLE_POSTS_PUBLISHEDOPTION"
                android:layout_weight=".5"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:text="@string/published"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/radio_colors" />

            <RadioButton
                android:id="@+id/TEXTYLE_POSTS_SECRETOPTION"
                android:layout_weight=".5"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:text="@string/secret"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/radio_colors" />

            <RadioButton
                android:id="@+id/TEXTYLE_POSTS_TEMPORARYOPTION"
                android:layout_weight=".5"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:text="@string/temporary"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/radio_colors" />

            <RadioButton
                android:id="@+id/TEXTYLE_POSTS_REPORTEDOPTION"
                android:layout_weight=".5"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:text="@string/reported"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/radio_colors" />
        </com.arnia.karybu.controls.SegmentedRadioGroup>
    </LinearLayout>

</LinearLayout>