<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ADD_NEW_WEBSITE"
            style="@style/button"
            android:layout_marginBottom="40dp"
            android:text="@string/welcome_screen_add_new_website" />

        <TextView
            android:id="@+id/TERM_OF_USE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/welcome_screen_term_of_use"
            android:textColor="@color/terms_of_use" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lyt_bottom"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/APP_DESCRIPTION"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_splash"
            android:gravity="center"
            android:lines="2"
            android:text="@string/welcome_screen_description"
            android:textColor="@color/splash_description" />
    </LinearLayout>

</RelativeLayout>